--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,4 +1,8 @@
 $blue: #4B69FD; 
 $black: #000000; 
 $orange: #FE652B;
+$red: #842029; 
 $beige: #FFF9EB;
+$gray: #c4c4c4; 
+$light-pink: #f8d7da; 
+$light-pink-border: #f5c2c7; 
