--- a/src/index.scss
+++ b/src/index.scss
@@ -4,10 +4,30 @@ html {
   background: $blue;
   border: 2px solid black;
   font-family: 'Poppins', sans-serif;
+  min-width: 375px;
 }
 
 #root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+section {
+  width: 100%;
+  text-align: center;
+  max-width: 900px;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 32px;
+  margin-bottom: 36px;
+  color: $blue;
+}
+
+ul li {
+  font-size: 18px;
+  font-weight: 300;
+  margin: 8px 0;
 }
